<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/lessontitle"
        android:id="@+id/title2"
        app:layout_constraintLeft_toRightOf="@id/backbtn" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title2"
        android:layout_marginLeft="@dimen/bigMargin"
        android:id="@+id/backbtn"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/bigMargin"
        android:paddingRight="@dimen/bigMargin"
        app:layout_constraintTop_toBottomOf="@id/title2"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt2.1"
                style="@style/lessontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ltxt21" />

            <TextView
                android:id="@+id/sub2.1"
                style="@style/lessonsubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lilMargin"
                android:text="@string/Lsub21" />

            <LinearLayout
                android:id="@+id/vid2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/sub2.2"
                style="@style/lessonsubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lilMargin"
                android:text="@string/Lsub22" />

            <TextView
                android:id="@+id/txt2.2"
                style="@style/lessontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ltxt22" />

            <LinearLayout
                android:id="@+id/vid2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/sub2.3"
                style="@style/lessonsubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lilMargin"
                android:text="@string/Lsub23" />

            <TextView
                android:id="@+id/txt2.3"
                style="@style/lessontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ltxt23"/>

            <LinearLayout
                android:id="@+id/vid2.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/sub2.4"
                style="@style/lessonsubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lilMargin"
                android:text="@string/Lsub24" />

            <TextView
                android:id="@+id/txt2.4"
                style="@style/lessontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ltxt24"/>

            <LinearLayout
                android:id="@+id/vid2.4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>