<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/lessontitle"
        android:id="@+id/title1"
        app:layout_constraintLeft_toRightOf="@id/backbtn" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title1"
        android:layout_marginLeft="@dimen/bigMargin"
        android:id="@+id/backbtn"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/bigMargin"
        android:paddingRight="@dimen/bigMargin"
        app:layout_constraintTop_toBottomOf="@id/title1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt1.1"
            style="@style/lessontext"
            android:text="@string/Ltxt11"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sub1.1"
            style="@style/lessonsubtitle"
            android:text="@string/Lsub11"
            android:layout_marginTop="@dimen/lilMargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt1.2"
            style="@style/lessontext"
            android:text="@string/Ltxt12" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vid1.1"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>