<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/lessontitle"
        android:id="@+id/title3"
        app:layout_constraintLeft_toRightOf="@id/backbtn" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title3"
        android:layout_marginLeft="@dimen/bigMargin"
        android:id="@+id/backbtn"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/bigMargin"
        android:paddingRight="@dimen/bigMargin"
        app:layout_constraintTop_toBottomOf="@id/title3"
        tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt3.1"
            style="@style/lessontext"
            android:text="@string/Ltxt31"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt3.2"
            style="@style/lessontext"
            android:text="This is for situations where someone is walkING somewhere. "
            android:layout_marginTop="@dimen/lilMargin"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2"
            android:layout_gravity="center">
            <TableRow
                android:background="#000000"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    style="@style/lessontext"
                    android:layout_height="match_parent"
                    android:text="(Ami/Amra) Hatchi"
                    android:layout_margin="1dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    style="@style/lessontext"
                    android:layout_height="match_parent"
                    android:text="(Tumi/Tomra) Hatcho"
                    android:layout_margin="1dp"
                    android:layout_column="1"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    style="@style/lessontext"
                    android:layout_height="match_parent"
                    android:text="(O/Ora) Hatche"
                    android:layout_margin="1dp"
                    android:layout_column="2"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/sub3.1"
            style="@style/lessonsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lilMargin"
            android:text="@string/Lsub31" />
        <TextView
            android:id="@+id/txt3.3"
            style="@style/lessonsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lilMargin"
            android:text="@string/Ltxt33" />

        <LinearLayout
            android:id="@+id/vid3.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        <TextView
            android:id="@+id/txt3.4"
            style="@style/lessonsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lilMargin"
            android:text="@string/Ltxt34" />
        <TextView
            android:id="@+id/sub3.2"
            style="@style/lessonsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lilMargin"
            android:text="@string/Lsub32" />

        <LinearLayout
            android:id="@+id/vid3.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        <TextView
            android:id="@+id/sub3.3"
            style="@style/lessonsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lilMargin"
            android:text="@string/Lsub33" />
        <TextView
            android:id="@+id/txt3.5"
            style="@style/lessonsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lilMargin"
            android:text="@string/Ltxt35" />

    </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>